# Webserv

./: .clang-format  .clang-tidy  .gitignore  .normignore  94-feat-creat-fileHandler.patch  CMakeLists.txt  CPPLINT.cfg  DartConfiguration.tcl  Makefile  Webserv  cat  compile_commands.json  run_clang_tidy.sh  state.hpp  test.txt  webserv
.github/: copilot-instructions.md  pull_request_template.md  pull_request_template.me
.github/ISSUE_TEMPLATE/: bug_fix.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: basic_pull_request.md
.github/workflows/: leak_check.yml  lint_check.yml  unit_test.yml
buid/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_math[1]_include.cmake
config_file/: default.conf  default_cgi.conf  default_cpy.conf  status_code.txt  test.conf
docs/: UploadFileHandler.md
include/: Config.hpp  ConfigNode.hpp  ConfigParser.hpp  ConfigTokenizer.hpp  ConfigTree.hpp  DocumentRootConfig.hpp  LocationContext.hpp  ServerContext.hpp  Token.hpp  Validation.hpp  Validator.hpp  data.hpp
include/action/: action.hpp  cgi_action.hpp  cgi_context.hpp  context.hpp
include/config/: config.hpp  data.hpp  parser.hpp  token.hpp  tokenizer.hpp  validator.hpp
include/config/context/: location.hpp  (+5 more)
include/http/: method.hpp  mime.hpp  status.hpp  virtual_server.hpp
include/server/: EpollEvent.hpp  EpollEventNotifier.hpp  FileDescriptor.hpp  IEventNotifier.hpp  ISocket.hpp  Server.hpp
include/utils/: ip.hpp  logger.hpp  path.hpp  string.hpp  url.hpp
new/: inde.html
src/: CMakeLists.txt  Validation.cpp  diff.patch  dummy.cpp  main.cpp
src/action/: cgi_action.cpp  cgi_context.cpp
src/config/: Config.cpp  ConfigNode.cpp  ConfigParser.cpp  ConfigTokenizer.cpp  ConfigTree.cpp  DocumentRootConfig.cpp  LocationContext.cpp  ServerContext.cpp  Token.cpp  Validation.cpp  config.cpp  parser.cpp  testPrint.cpp  token.cpp  tokenizer.cpp  validator.cpp
src/config/context/: documentRootConfig.cpp  documentRootContext.cpp  document_root.cpp  location.cpp  locationContext.cpp  server.cpp  serverContext.cpp
src/http/: method.cpp  mime.cpp  status.cpp  virtual_server.cpp
src/http/actions/: cgiTask.cpp
src/http/config/: config_resolver.cpp
src/http/handler/file/: cgi.cpp  cgi_env.cpp  cgi_execute.cpp  cgi_parse.cpp  cgi_target.cpp  delete.cpp  fileOrCgi.cpp  redirect.cpp  static.cpp  upload.cpp
src/http/handler/router/: builder.cpp  internal.cpp  registry.cpp  router.cpp
src/http/handler/router/middleware/: chain.cpp  error_page.cpp  logger.cpp
src/http/request/: http_request.cpp  request.cpp
src/http/request/parse/: request_parser.cpp
src/http/request/read/: body.cpp  chunked_body.cpp  context.cpp  header.cpp  header_parsing_utils.cpp  length_body.cpp  line.cpp  reader.cpp  utils.cpp
src/http/response/: builder.cpp  response.cpp  response_headers.cpp
src/io/base/: fileDescriptor.cpp
src/io/handler/: CgiStdinHandler.cpp  CgiStdoutHandler.cpp  ClientHandler.cpp  ListenerHandler.cpp
src/io/input/read/: buffer.cpp
src/io/input/reader/: fd.cpp  reader_fd.cpp
src/io/input/write/: buffer.cpp
src/io/input/writer/: fd.cpp
src/server/: EpollEventNotifier.cpp  epollEvent.cpp  epollEventNotifier.cpp  server.cpp
src/server/connection/: connection.cpp  connectionManager.cpp
src/server/dispatcher/: requestDispatcher.cpp
src/server/fileDescriptor/: fdRegistry.cpp  fdUtils.cpp
src/server/platform/: signalLayer.cpp
src/server/resolver/: endpointResolver.cpp
src/server/socket/: connectionSocket.cpp  serverSocket.cpp  socketAddr.cpp
src/utils/: ip.cpp  logger.cpp  string.cpp
src/validator/: Validator.cpp
test/: CMakeLists.txt  post_largetest.py  test_curl.sh  test_template.cpp
test/config/: CMakeLists.txt  ConfigParser_test.cpp  Makefile  cmake_install.cmake  parser_test  parser_test.cpp  parser_test[1]_include.cmake  parser_test[1]_tests.cmake
test/config/context/: CMakeLists.txt  documentRootConfig_test.cpp
test/http/: CMakeLists.txt  method_test.cpp  mime_test.cpp  status_test.cpp  virtual_server_test.cpp
test/http/config/: CMakeLists.txt  resolver_test.cpp
test/http/handler/: CMakeLists.txt  matcher_test.cpp
test/http/handler/file/: CMakeLists.txt  cgi_epoll_test.cpp  cgi_test.cpp  delete_test.cpp  redirect_test.cpp  static_test.cpp  upload_test.cpp
test/http/handler/router/: CMakeLists.txt  registry_test.cpp  router_test.cpp
test/http/handler/router/middleware/: CMakeLists.txt  error_page_test.cpp  logger_test.cpp
test/http/request/: CMakeLists.txt  http_request_test.cpp  request_test.cpp
test/http/request/parse/: CMakeLists.txt  request_parse_test.cpp
test/http/request/read/: CMakeLists.txt  body_chunked_test.cpp  body_length_test.cpp  body_test.cpp  context_test.cpp  header_test.cpp  line_test.cpp  reader_test.cpp  utils_test.cpp
test/http/response/: CMakeLists.txt  builder_test.cpp  response_test.cpp
test/io/: CMakeLists.txt
test/io/base/: CMakeLists.txt  fileDescriptor_test.cpp
test/io/input/: CMakeLists.txt
test/io/input/read/: CMakeLists.txt  buffer_test.cpp
test/io/input/reader/: CMakeLists.txt  fd_test.cpp
test/io/input/writer/: CMakeLists.txt  buffer_test.cpp
test/server/: CMakeLists.txt  epollEventNotifier_test.cpp  epollEvent_test.cpp
test/server/connection/: CMakeLists.txt  connectionManager_test.cpp  connection_test.cpp
test/server/platform/: signal_layer_test.cpp
test/server/socket/: CMakeLists.txt  connectionSocket_test.cpp  serverSocket_test.cpp  socketAddr_test.cpp
test/test_config/: no_host.conf  no_index.conf  no_listen.conf  test.conf
test/utils/: CMakeLists.txt  string_test.cpp
test/utils/types/: CMakeLists.txt  either_test.cpp  option_test.cpp  result_test.cpp  try_test.cpp
unit_test_sample/srcs/: math.cpp  math.h  sources.cmake
unit_test_sample/tests/: test_math.cpp
unit_tests/: test_math.cpp
www/cgi-bin/: hello.py  posttest.py  sleep.py
www/gym/: index.html
www/html/: 403.html  404.html  405.html  500.html
www/shop/: index.html
www/siteA/: index.html
www/user_downloads/: down.html  index.html
www/user_uploads/: index.html
(+85 files in other folders)
